allow retrieval of dataset without implementations (#275)
