# core/java/iesi-rest-without-microservices/src/main/java/io/metadew/iesi/server/rest/dataset/dto/DatasetImplementationPostDto.java
@@ -1,0 +1,20 @@
+package io.metadew.iesi.server.rest.dataset.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+import javax.validation.constraints.NotEmpty;
+import java.util.Set;
+
+@Data
+@EqualsAndHashCode(callSuper = false)
+@AllArgsConstructor
+@NoArgsConstructor
+public abstract class DatasetImplementationPostDto {
+
+    @NotEmpty
+    private Set<DatasetImplementationLabelPostDto> labels;
+
+}
